grammar.js
    cql_library: ($) =>
      seq(
        optional($.library_definition),
        repeat($.definition),
        repeat($.statement)
      ),

    /* Definitions */

    definition: ($) =>
      choice(
        $.using_definition,
        $.include_definition,
        $.valueset_definition,
        $.codesystem_definition,
        $.parameter_definition,
        $.code_definition,
        $.concept_definition
      ),

    include_definition: ($) =>
      seq(
        "include",
        $.qualified_identifier,
        optional($.version_specifier),
        optional(seq("called", alias($.identifier, $.local_identifier)))
      ),

    valueset_definition: ($) =>
      seq(
        optional($.access_modifier),
        "valueset",
        $.qualified_identifier,
        ":",
        alias($.string, $.valueset_id),
        optional($.version_specifier),
        optional($.codesystems)
      ),

    codesystems: ($) =>
      seq(
        "codesystems",
        "{",
        alias($.code_or_codesystem_identifier, $.codesystem_identifier),
        repeat(
          seq(
            ",",
            alias($.code_or_codesystem_identifier, $.codesystem_identifier)
          )
        ),
        "}"
      ),

    codesystem_definition: ($) =>
      seq(
        optional($.access_modifier),
        "codesystem",
        $.identifier,
        ":",
        alias($.string, $.codesystem_id),
        optional($.version_specifier)
      ),

    code_definition: ($) =>
      seq(
        optional($.access_modifier),
        "code",
        $.identifier,
        ":",
        alias($.string, $.code_id),
        "from",
        alias($.code_or_codesystem_identifier, $.codesystem_identifier),
        optional($.display_clause)
      ),

    access_modifier: () => choice("public", "private"),

    /* Statements */

    statement: ($) =>
      choice(
        $.expression_definition,
        $.context_definition,
        $.function_definition
      ),

    function_definition: ($) =>
      seq(
        "define",
        optional($.access_modifier),
        optional(alias("fluent", $.fluent_modifier)),
        "function",
        $.identifier,
        "(",
        optional(
          seq($.operand_definition, repeat(seq(",", $.operand_definition)))
        ),
        ")",
        optional(seq("returns", $.type_specifier)),
        ":",
        choice(alias($.expression, $.function_body), "external")
      ),

    operand_definition: ($) => seq($.referential_identifier, $.type_specifier),

    /* Expressions */

    expression_definition: ($) =>
      seq(
        "define",
        optional($.access_modifier),
        $.identifier,
        ":",
        $.expression
      ),

    expression: ($) =>
      choice(
        $.expression_term,
        $.retrieve,
        $.query,
        $.boolean_expression,
        $.type_expression,
        $.cast_expression,
        $.not_expression,
        $.existence_expression,
        $.between_expression,
        $.equality_expression,
        $.inequality_expression,
        $.and_expression,
        $.or_expression,
        $.implies_expression,
        $.in_fix_set_expression,
        $.duration_between_expression,
        $.difference_between_expression,
        $.membership_expression,
        $.timing_expression
      ),

    // TODO: everything
    expression_term: ($) => choice($.term),

    term: ($) =>
      choice(
        $.invocation,
        $.literal,
        $.parenthesized_term,
        $.external_constant,
        $.interval_selector,
        $.tuple_selector,
        $.instance_selector,
        $.list_selector,
        $.code_selector,
        $.concept_selector
      ),

    literal: ($) =>
      choice(
        alias(/true|false/, $.boolean_literal),
        alias("null", $.null_literal),
        alias($.string, $.string_literal),
        alias($.number, $.number_literal),
        alias($.long_number, $.long_number_literal),
        alias($.quantity, $.quantity_literal),
        alias($.ratio, $.ratio_literal),
        alias($.date, $.date_literal),
        alias($.datetime, $.datetime_literal),
        alias($.time, $.time_literal)
      ),

    qualified_identifier_expression: ($) =>
      seq(
        repeat(
          seq(alias($.referential_identifier, $.qualifier_expression), ".")
        ),
        $.referential_identifier
      ),

    retrieve: ($) =>
      seq("[", $.named_type_specifier, optional(seq(":", $.terminology)), "]"),

    terminology: ($) => choice($.qualified_identifier_expression, $.expression),

    /* Type Specifiers */
    type_specifier: ($) =>
      choice(
        $.named_type_specifier,
        $.list_type_specifier,
        $.interval_type_specifier,
        $.tuple_type_specifier,
        $.choice_type_specifier
      ),

    named_type_specifier: ($) =>
      seq(
        repeat(seq(alias($.identifier, $.qualifier), ".")),
        $.referential_or_type_name_identifier
      ),

    version_specifier: ($) => seq("version", alias($.string, $.version)),

    identifier: ($) =>
      choice($.default_identifier, $.quoted_identifier, $.delimited_identifier),

    qualified_identifier: ($) =>
      seq(repeat(seq(alias($.identifier, $.qualifier), ".")), $.identifier),

    default_identifier: () => /([A-Za-z]|'_')([A-Za-z0-9]|'_')*/,

    quoted_identifier: ($) =>
      seq(
        '"',
        optional(
          repeat(choice($.double_quote_string_fragment, $.escape_sequence))
        ),
        '"'
      ),

    referential_identifier: ($) =>
      prec(1, choice($.identifier, $.keyword_identifier)),

    type_name_identifier: () =>
      prec(1, choice("Code", "Concept", "date", "time")),

    referential_or_type_name_identifier: ($) =>
      choice($.referential_identifier, $.type_name_identifier),

    string: ($) =>
      seq(
        "'",
        repeat(choice($.single_quote_string_fragment, $.escape_sequence)),
        "'"
      ),

    single_quote_string_fragment: () => token.immediate(prec(1, /[^'\\]+/)),

    double_quote_string_fragment: () => token.immediate(prec(1, /[^"\\]+/)),

    display_clause: ($) => seq("display", $.string),

    /** Dates **/
